Fix: text-align has no effect on img elements.

--- a/frontend/src/style/read.css
+++ b/frontend/src/style/read.css
@@ -27,11 +27,11 @@ div.page-img-container {
     }
 
     >img.double-page:nth-child(1) {
-        text-align: right;
+        object-position: right center;
     }
 
     >img.double-page:nth-child(2) {
-        text-align: left;
+        object-position: left center;
     }
 }
 
